# qiskit-classroom

./: CHANGELOG.md  LICENSE  README.md  ecosystem.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python_tox.yml
docs/: index.html  qiskit_classroom.html  search.js
docs/qiskit_classroom/: converter_model.html  converter_presenter.html  converter_view.html  expression_enum.html  input_model.html  input_view.html  result_image_dialog.html  worker.html
qiskit_classroom/: __init__.py  __main__.py  circuit.py  converter_model.py  converter_presenter.py  converter_view.py  expression_enum.py  input_model.py  input_view.py  result_image_dialog.py  worker.py
scripts/: configure_python.sh  generate_documents.sh  install_requirements.sh
tests/: test_converter_model.py  test_converter_presenter.py  test_single_circuit.py  test_worker.py
