[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['qiskit_class*']
exclude = ['qiskit_class*tests']

[project]
name = "qiskit-classroom"
version = "0.1.0"
authors = [{ name = "KMU-quantum-classroom" }]
description = "the Qiskit classroom GUI applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit==0.44.1",
    "PySide6==6.5.1.1",
    "qasync==0.24.0",
    "qiskit-classroom-converter==0.2.0",
    "matplotlib==3.7.2",
    "pylatexenc==2.10",
]

[project.optional-dependencies]
dev = [
    "coverage==7.3.0",
    "pylint==2.17.5",
    "tox==4.10.0",
    "build==0.10.0",
    "pdoc==14.0.0",
]

[project.urls]
"Homepage" = "https://github.com/KMU-quantum-classroom/qiskit-classroom"
"Bug Tracker" = "https://kmu-quantum-classroom.github.io/"

[project.gui-scripts]
qiskit-classroom = "qiskit_classroom:__main__.main"
